# receipt-bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  format.sh  install-requirements.sh  make-virtualenv.sh  pyproject.toml  requirements.txt  requirements_dev.txt  run.sh  tox.ini
.github/workflows/: ci-tests.yml
app/: .env  bot.py  db.py  settings.py
app/i18n/: bot.ru.yml
app/schemas/: __init__.py  receipt.py
app/utils/: __init__.py  receipt_parser.py
src/receipt_bot/: bot.py  db.py  settings.py  util.py
src/receipt_bot/i18n/: bot.en.yml
tests/: test_util.py
